src/components/Project.css
/* ... */
.project__headerNavigator {
    position: absolute;
    bottom: 0;
    left: 0;
    display: flex;
    width: 100%;
}

.project__headerNavigatorItem {
    width: 25%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    transition: background-color 0.3s ease;
}

.project__headerNavigatorItem:hover {
    background-color: #0000001f;
    cursor: pointer;
}

.project__headerNavigatorItemTitle {
    font-size: 15px;
    text-align: center;
}

.project__additionalInfo {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding: 30px 0;
}

.project__authors {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 20px;
    width: 80%;
    max-width: 800px;
}

.project__authorsOneLine {
    display: flex;
    gap: 20px;
}

.project__author {
    font-size: 25px;
}

.project__affiliations {
    display: flex;
    gap: 20px;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    width: 80%;
    max-width: 800px;
}

.project__affiliation {
    font-size: 20px;
}

.project__symbols {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    width: 80%;
    max-width: 800px;
}

.project__materials {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
    align-items: center;
    width: 80%;
    max-width: 800px;
}

.project__material {
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content: center;
    align-items: center;
    padding: 10px 15px;
    border-radius: 100px;
}

.project__materialIcon {
    width: 25px;
}

.project__materialName {
    font-size: 20px;
}

.project__body {
    display: flex;
    flex-direction: column;
    gap: 20px;
    align-items: center;
}

.project__bodyContentTitle {
    font-size: 40px;
}

.project__bodyContentWrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.project__bodyContent {
    padding: 30px 0;
    width: 80%;
    max-width: 1200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

.project__overviewVideo {
    width: 100%;
    border-radius: 20px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.project__abstractText {
    font-size: 18px;
    line-height: 1.4;
    text-align: justify;
}

.project__methodContent {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.project__methodContentTitle {
    font-size: 25px;
    width: 100%;
}

.project__methodContentText {
    text-align: center;
    font-size: 15px;
}

.project__methodDataCollectionBody {
    display: flex;
    align-items: center;
    gap: 50px;
}

.project__methodDataCollectionImage {
    width: 50%;
}

.project__methodDataCollectionPointCloudsWrapper {
    position: relative;
    width: 36vw;
    max-width: 540px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    overflow-x: hidden;
    overflow-y: visible;
}

.project__methodDataCollectionPointCloudsNavigator {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    border-radius: 20px;
    overflow: hidden;
}

.project__methodDataCollectionPointCloudsNavigatorButton {
    width: 25%;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s ease;
}

.project__methodDataCollectionPointCloudsNavigatorButton:hover {
    cursor: pointer;
    background-color: #0000001f;
}

.project__methodDataCollectionPointCloudsNavigatorButton--selected, .project__methodDataCollectionPointCloudsNavigatorButton--selected:hover {
    background-color: #212121;
}

.project__methodDataCollectionPointCloudsNavigatorButton--selected > p {
    color: #fff;
}

.project__methodDataCollectionPointCloudsNavigatorButtonText {
    font-size: 15px;
    transition: color 0.3s ease;
}

.project__methodDataCollection3DHelperWrapper {
    position: absolute;
    width: 100%;
    height: 350px;
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: 0;
    background-color: #ffffff;
    opacity: 0.5;
}

.project__methodDataCollection3DHelperWrapper {
    z-index: -1;
    opacity: 0;
    transition: opacity 0.3s ease;
}

.project__methodDataCollection3DHelperWrapper--visible {
    opacity: 0.9;
    z-index: 1;
}

.project__methodDataCollection3DHelper {
    width: 200px;
}

.project__methodDataCollectionPointClouds {
    height: 400px;
    display: flex;
    gap: 20px;
    align-items: center;
    height: 100%;
    overflow-x: hidden;
}

.project__methodDataCollectionPointCloud {
    height: 350px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.project__methodDataCollectionPointCloudCanvas {
    width: 36vw !important;
    max-width: 540px;
    height: 100%;
}

.project__methodDataCollectionPointCloudsLeftArrow, .project__realTimeVideosLeftArrow {
    left: 10px;
}

.project__methodDataCollectionPointCloudsRightArrow, .project__realTimeVideosRightArrow {
    right: 10px;
}

.project__methodDataCollectionPointCloudsArrow, .project__applicabilityVideosArrow, .project__dataEfficiencyArrow, .project__realTimeVideosArrow {
    position: absolute;
    width: 30px;
    height: 30px;
    border-radius: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    z-index: 1;
    transition: background-color 0.3s ease;
}

.project__methodDataCollectionPointCloudsArrow > svg, .project__applicabilityVideosArrow > svg, .project__dataEfficiencyArrow > svg, .project__realTimeVideosArrow > svg {
    width: 20px;
    height: 20px;
}
/* ... */

